# fewshot-boost-app

./: .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  benchmark.py  cli.py  config.yaml  distill.py  evaluator.py  pricing.py  pyproject.toml  requirements.txt  selector.py  slm.py  tasks.py
data/: all_results_per_category.csv  all_results_per_question.csv  all_results_summary.csv
tests/: test_core.py
