[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fewshot-boost"
version = "0.1.0"
description = "Make tiny language models smarter with intelligent few-shot example selection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "InquirerPy>=0.3.4",
    "pandas>=2.2.0",
    "pyyaml>=6.0.1",
    "scipy>=1.13.0",
]

[project.optional-dependencies]
web = [
    "streamlit>=1.32.0",
    "plotly>=5.18.0",
]
inference = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "datasets>=2.19.0",
    "accelerate>=0.30.0",
    "peft>=0.11.0",
]
llm = [
    "anthropic>=0.25.0",
    "openai>=1.30.0",
]
all = [
    "fewshot-boost[web,inference,llm]",
]

[project.scripts]
fewshot-boost = "cli:app"

[tool.setuptools]
py-modules = ["cli", "tasks", "pricing", "slm", "selector", "benchmark", "evaluator", "distill"]
