[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "david-vs-goliath"
version = "0.3.0"
description = "Cut your LLM API bill by up to 90% — intelligent few-shot selection and knowledge distillation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "InquirerPy>=0.3.4",
    "pandas>=2.2.0",
    "pyyaml>=6.0.1",
    "scipy>=1.13.0",
]

[project.optional-dependencies]
web = [
    "streamlit>=1.32.0",
    "plotly>=5.18.0",
]
inference = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "datasets>=2.19.0",
    "accelerate>=0.30.0",
    "peft>=0.11.0",
]
llm = [
    "anthropic>=0.25.0",
    "openai>=1.30.0",
]
dev = [
    "pytest>=8.0",
]
all = [
    "david-vs-goliath[web,inference,llm,dev]",
]

[project.scripts]
dvg = "cli:app"

[tool.setuptools]
py-modules = ["cli", "tasks", "pricing", "slm", "selector", "benchmark", "distill"]

[tool.pytest.ini_options]
testpaths = ["tests"]
